--- a/site.html
+++ b/site.html
@@ -90,9 +90,9 @@
                 <option value="Network Free DC">Network Free DC</option>
                 <option value="External HDD">External HDD</option>
             </select>
-
-            <button type="submit">Save</button>
         </form>
+        <a href=""></a>
+        <button type="submit">Save</button>
     </div>
 </body>
 </html>
